# hwp-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hwp_manager/: __init__.py  cli.py
src/hwp_manager/converter/: __init__.py  hwp_converter.py  hwpx_converter.py
src/hwp_manager/reader/: __init__.py  hwp_reader.py  hwpx_reader.py
