[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "hwp-manager"
version = "0.1.0"
description = "HWP/HWPX 파일을 읽고 변환하는 라이브러리 (hwp → txt, hwpx → md/txt)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "olefile",
    "lxml",
]

[project.scripts]
hwm = "hwp_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
