[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "hwp-manager"
version = "0.1.0"
description = "HWP/HWPX 파일을 읽고 변환하는 라이브러리 (hwp → txt, hwpx → md/txt)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "olefile",
    "lxml",
]

[project.scripts]
hwm = "hwp_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
